lib/src/compiler/tests/testdata/errors/107.out
error[E014]: invalid escape sequence
 --> line:2:15
  |
2 |   condition: "\x" == "\x"
  |               ^^ expecting two hex digits after `\x`
  |